test/Kubernetes.Tests/testassets/port-diff-name/clusters.json
[
  {
    "ClusterId": "backend.default:88",
    "LoadBalancingPolicy": null,
    "SessionAffinity": null,
    "HealthCheck": null,
    "HttpClient": null,
    "HttpRequest": null,
    "Destinations": {
      "http://10.244.2.33:80": {
        "Address": "http://10.244.2.33:80",
        "Health": null,
        "Metadata": null
      }
    },
    "TransportAuthentication": {},
    "Metadata": null
  }
]
