test/Kubernetes.Tests/testassets/port-diff-name/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: port-diff-name
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /foo
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 88
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: default
spec:
  selector:
    app: backend
  ports:
  - port: 88
    name: my-http
    targetPort: http
  type: ClusterIP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: backend
  namespace: default
subsets:
  - addresses:
    - ip: 10.244.2.33
    ports:
    - port: 80
      protocol: TCP
      name: my-http
